more fonts and fixes letter and word spacing for headers

--- a/public/styles/onyx/_header.scss
+++ b/public/styles/onyx/_header.scss
@@ -10,6 +10,8 @@
   font-weight: 800;
   color: #88483d;
   line-height: initial;
+  word-spacing: .05em;
+  line-height: 1em;
   clear: left;
 }
 
