--- a/public/styles/onyx/onyx.scss
+++ b/public/styles/onyx/onyx.scss
@@ -4,7 +4,7 @@
 @import "../fonts/Almendra/index";
 @import "../fonts/ScalySans/index";
 @import "../fonts/GoudyInitialen/index";
-@import "../fonts/RothenburgDecorative/index";
+@import "../fonts/QumpellkaNo12/index";
 @import "../printer-settings.scss";
 @import "../utils";
 
@@ -147,8 +147,7 @@
 
     tbody {
       tr:nth-child(odd) {
-        background-color: #AFC8DF
-        /*  #E97B44; */
+        background-color: rgba(175,200,123,0.51)
       }
 
       tr td {
@@ -215,13 +214,15 @@
   & .pageNumber {
     position: absolute;
     right: 50px;
-    bottom: 8px;
+    bottom: 6px;
     width: 50px;
-    font-family: "Rothenburg Decorative";
+    font-family: QumpellkaNo12;
+    font-weight: bold;
     font-size: 1.8em;
-    color: #f9dd9a;    
+    color: #f9fd0a;    
     z-index:10;
     text-align: center;
+    letter-spacing: .2em;
   }
 
   & .pageNumber.auto::after {
@@ -237,7 +238,7 @@
   &:after {
     content: "";
     position: absolute;
-    bottom: -140px;
+    bottom: -145px;
     right: 0;
     height: 20%;
     width: 20%;
